إضافة صفحة تسجيل الدخول

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
+MONGODB_URI=mongodb+srv://mn102560_db_user:u6JNoiURYUcfyFTx@cluster0.jcvzqey.mongodb.net/Ghazl
 PORT=4000
-MONGODB_URI=mongodb+srv://mn102560_db_user:n8IegKoBxLTAfVuM@cluster0.jcvzqey.mongodb.net/mydatabase
+NODE_ENV=development
